# jw-agent

./: .gitignore  AGENTS.md  CONSTITUTION.md  Cargo.toml  README.md
api/: openapi.json
apps/web/: .gitignore  components.json  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/src/: main.tsx  routeTree.gen.ts
crates/ffi-pam/: Cargo.toml
crates/ffi-pam/src/: lib.rs  linux.rs
crates/jw-agentd/: Cargo.toml
crates/jw-agentd/migrations/: 0001_initial.sql  0002_terminal_audit.sql  0003_file_audit.sql  0004_file_upload_audit.sql  0005_totp.sql  0006_administrative_access.sql
crates/jw-agentd/service-catalog/: ubuntu-24.04-v1.json
crates/jw-agentd/src/: api.rs  askpass.rs  auth_client.rs  config.rs  file_session.rs  integration_catalog.rs  lib.rs  main.rs  observation.rs  openssh.rs  ops_client.rs  php_fpm.rs  service_config_inventory.rs  service_inventory.rs  session.rs  session_additional_auth_tests.rs  sftp_protocol.rs  terminal.rs  terminal_session.rs  totp.rs
crates/jw-agentd/src/api/: activity.rs  additional_auth.rs  administrative_access.rs  firewall.rs  maintenance_operations.rs  observation.rs  php_fpm.rs  totp.rs
crates/jw-agentd/src/api/tests/: websocket_contract_tests.rs
crates/jw-agentd/src/session/: lifecycle.rs
crates/jw-authd/: Cargo.toml
crates/jw-authd/src/: lib.rs  main.rs
crates/jw-certd/: Cargo.toml
crates/jw-certd/src/: lib.rs  main.rs
crates/jw-contracts/: Cargo.toml
crates/jw-contracts/src/: assurance.rs  auth.rs  certificate.rs  files.rs  firewall.rs  framing.rs  integration.rs  lib.rs  observation.rs  operation.rs  php_fpm.rs  problem.rs  service_config.rs  settings.rs  terminal.rs  totp.rs
crates/jw-edge/: Cargo.toml
crates/jw-edge/src/: config.rs  lib.rs  main.rs  proxy.rs  tls.rs
crates/jw-opsd/: Cargo.toml
crates/jw-opsd/migrations/: 0001_initial.sql  0002_managed_config.sql  0003_certbot_renew.sql  0004_certbot_issue.sql  0005_certbot_attach.sql  0006_ufw_rule.sql
crates/jw-opsd/src/: certbot_runner.rs  certificate.rs  config.rs  digest.rs  engine.rs  engine_test_fakes.rs  error.rs  ledger.rs  lib.rs  main.rs  managed_config.rs  nginx.rs  nginx_diagnostic.rs  php_fpm_diagnostic.rs  runner.rs  service_control.rs  snapshot.rs  ufw.rs
crates/jw-opsd/src/engine/: managed_config_plan.rs  service_operation.rs  ufw_operation.rs
crates/jw-opsd/src/engine/tests/: operation_smoke_tests.rs  php_fpm_tests.rs  ufw_tests.rs
crates/jw-opsd/src/ledger/: activity.rs  operation_views.rs  tests.rs
crates/jw-opsd/src/ledger/tests/: activity_tests.rs
crates/jw-opsd/src/managed_config/: cleanup.rs  metadata.rs  proposal.rs  tests.rs  text.rs  tree.rs
docs/: README.md
docs/00-governance/: build-and-dependency-policy.md  clean-room-policy.md  document-authority.md  evidence-levels.md  specification-lifecycle.md  verification-harness.md
docs/10-product/: distribution-liability.md  mvp-scope.md  non-goals.md  product-boundary.md  support-matrix.md  user-workflows.md
docs/20-architecture/: central-future.md  deployment-model.md  public-ingress.md  state-ownership.md  system-context.md  workspace-layout.md
docs/30-domain/: domain-map.md  evidence-forensics.md  safe-operation.md  service-adapter-contract.md
docs/40-contracts/: assurance-levels.md  local-interfaces.md  operation-lifecycle.md
docs/50-data/: ledger-snapshot-retention.md  local-state.md
docs/60-ui-ux/: design-system-dashboard.md  information-architecture.md  interaction-accessibility.md  web-stack.md
docs/70-security/: JW-agent-threat-model.md  logging-and-forensics.md  pam-authentication.md  privilege-and-auth.md  public-access.md  update-supply-chain.md
docs/80-delivery/: decision-register.md  definition-of-done.md  packaging-release.md  roadmap.md  test-strategy.md
docs/90-specs/: README.md
docs/90-specs/access/: openssh-password-broker-v1.md  openssh-sftp-atomic-upload-v1.md  openssh-sftp-readonly-v1.md  openssh-terminal-sftp-v1.md
docs/90-specs/adr/: 0001-local-first-mvp.md  0002-agentd-opsd-split.md  0003-single-xtask-harness.md  0004-web-toolchain.md  0005-minimal-workspace.md  0006-clean-room-reference-lessons.md  0007-public-https-pam-boundary.md  0008-p1-storage-and-contract-generation.md  0009-p2-safety-kernel-decisions.md  0010-local-maintenance-surfaces.md  0011-certbot-network-runner.md  0012-loopback-tls-verifier.md  0013-system-openssh-client.md  0014-codemirror-config-editor.md  0015-php-fpm-managed-config-envelope.md  0016-totp-crypto-and-enrollment-boundary.md  0017-risk-tiered-operation-approval.md  0018-independent-rust-management-edge.md  0019-managed-service-config-and-firewall-boundary.md
docs/90-specs/auth/: administrative-access-v1.md  pam-login-v1.md  totp-step-up-v1.md
docs/90-specs/observability/: service-inventory-v1.md
docs/90-specs/operations/: certbot-certificate-v1.md  managed-config-file-v1.md  managed-config-restore-v1.md  nginx-site-state-set-v1.md  php-fpm-config-v1.md  public-access-profile-v1.md  service-control-v1.md  ufw-rule-v1.md
docs/90-specs/ui/: integration-catalog-v1.md  login-session-v1.md  managed-config-wizard-v1.md  overview-v1.md  responsive-shell-v1.md  rollback-assurance-v1.md
packaging/: README.md
packaging/debian/: changelog  control  copyright  install  postinst  rules
packaging/default/: jw-agent
packaging/nginx/: acme-challenge.conf  jw-agent-management.conf.template  proxy-common.conf
packaging/pam/: jw-agent
packaging/systemd/: jw-agentd.service  jw-authd.socket  jw-authd@.service  jw-certd.socket  jw-certd@.service  jw-edge.service  jw-opsd.service
packaging/sysusers/: jw-agent.conf
packaging/tmpfiles/: jw-agent.conf
tests/spec-fixtures/: managed-config-file-v1.json  nginx-site-state-set-v1.json
tests/vm/: README.md  playwright-cli.json.template
tests/vm/cloud-init/: meta-data.yaml  user-data.yaml.template
xtask/: Cargo.toml
xtask/src/: edge_boundary.rs  main.rs  process.rs  sftp_boundary.rs  source_policy.rs  vm.rs  web.rs
xtask/src/vm/: apache.rs  totp.rs  (+7 more)
(+83 files in other folders)
