[package]
name = "ffi-pam"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

# PAM is the only approved unsafe boundary in the workspace.
[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[dependencies]
zeroize = { workspace = true, features = ["alloc"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
