[package]
name = "jw-certd"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
jw-contracts = { path = "../jw-contracts" }
serde_json = { workspace = true, features = ["std"] }
sha2.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true, features = ["process", "resource", "signal", "socket"] }
