[package]
name = "jw-edge"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
rustls-pemfile.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-rustls.workspace = true
