[package]
name = "jw-opsd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
jw-contracts = { path = "../jw-contracts" }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true, features = ["resource", "socket", "user"] }
